Added Cleans to Makefile

--- a/Centepede/Makefile
+++ b/Centepede/Makefile
@@ -4,5 +4,8 @@ Game:
 Test:
 	g++ TestCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeTest -std=c++17
 
-clean:
-	rm decode
+cleanGame:
+	rm centipede
+
+cleanTest:
+	rm centipedeTest
