File Structure und InputBuffer

--- a/Centepede/Makefile
+++ b/Centepede/Makefile
@@ -1,11 +1,19 @@
-Game:
-	g++ SourceCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipede -std=c++17
+GameUnix:
+	g++ SourceCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeUnix -std=c++17 -lncurses
 
-Test:
-	g++ TestCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeTest -std=c++17
+GameWindows:
+	g++ SourceCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeWindows -std=c++17
+
+TestUnix:
+	g++ TestCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeTestUnix -std=c++17 -lncurses
+
+TestWindows:
+	g++ TestCode/Startup.cpp lib/concurrency_lib.cpp lib/console_lib.cpp lib/string_helper.cpp lib/file_lib.cpp -o centipedeTestWindows -std=c++17
 
 cleanGame:
-	rm centipede
+	rm centipedeUnix
+	rm centipedeWindows
 
 cleanTest:
-	rm centipedeTest
+	rm centipedeTestUnix
+	rm centipedeTestWindows
