--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "unordered_map": "cpp",
         "utility": "cpp",
         "vector": "cpp",
-        "future": "cpp"
+        "future": "cpp",
+        "random": "cpp"
     }
 }
